# orca

./: .gitignore  CMakeLists.txt  readme.md
examples/: test.orc  test.orca
src/: interpreter.cpp  interpreter.h  lexer.cpp  lexer.h  main.cpp  utils.h
src/evaluator/: evaluator.cpp  evaluator.h  runtime_callable.cpp  runtime_callable.h  runtime_value.cpp  runtime_value.h
src/parser/: ast_printer.cpp  ast_printer.h  expression.cpp  expression.h  parser.cpp  parser.h  statement.h
src/variable/: environment.cpp  environment.h  resolver.cpp  resolver.h
